hw18-solution StreamPractice ver3.1 fixed after mentor's review